--- a/appinfo.json
+++ b/appinfo.json
@@ -7,28 +7,7 @@
     "longName": "MenuTest1",
     "projectType": "native",
     "resources": {
-        "media": [
-            {
-                "file": "images/menu_icon_big_watch.png",
-                "name": "IMAGE_MENU_ICON_BIG_WATCH",
-                "type": "png"
-            },
-            {
-                "file": "images/menu_icon_sector_watch.png",
-                "name": "IMAGE_MENU_ICON_SECTOR_WATCH",
-                "type": "png"
-            },
-            {
-                "file": "images/menu_icon_binary_watch.png",
-                "name": "IMAGE_MENU_ICON_BINARY_WATCH",
-                "type": "png"
-            },
-            {
-                "file": "images/brains_watch_background.png",
-                "name": "IMAGE_BACKGROUND_BRAINS",
-                "type": "png"
-            }
-        ]
+        "media": []
     },
     "shortName": "MenuTest1",
     "uuid": "63b58eae-4f2c-4183-b224-6aecf07a1cbf",
