--- a/appinfo.json
+++ b/appinfo.json
@@ -3,7 +3,7 @@
 		  "setLines": 1,
 		  "lineIndex": 2,
 		  "lineText": 3,
-		  "allDone", 4
+		  "allDone": 4
 	       },
     "capabilities": [
         ""
