--- a/appinfo.json
+++ b/appinfo.json
@@ -1,10 +1,12 @@
 {
-    "appKeys": {  "setSpace":  0,
-		  "setLines": 1,
-		  "lineIndex": 2,
-		  "lineText": 3,
-		  "allDone": 4
-	       },
+    "appKeys": {
+        "allDone": 4,
+        "lineIndex": 2,
+        "lineText": 3,
+        "placeholder": 5,
+        "setLines": 1,
+        "setSpace": 0
+    },
     "capabilities": [
         ""
     ],
